# kanjiland-og

./: .gitignore  CLAUDE.md  LICENSE  NOTICE.md  README.md  pyproject.toml
configs/: m1_tokenizer.yaml  m2_corpus.yaml  m3_smoke.yaml  m3_smoke_mac.yaml  m3_tokenizer.yaml  m3_transformer_base.yaml  m5_ablation_base.yaml  m5_all_variants.yaml  m5_vocab_variants.yaml  m6_arms.yaml  m6_base.yaml  m8_annotate.yaml
data/processed/: tokenizer-16k.json  tokenizer-32k.json  tokenizer-8k.json
data/processed/m7_annot/: gate_report.json
data/raw/tatoeba/: en.txt  stats.json
data/samples/: dev.jsonl
docs/: CLOUD.md  DATA.md  DECISIONS.md  FORMAT_SPEC.md  GRAMMAR_INVENTORY_PROPOSAL.md  GRAMMAR_RULES.md  MODEL_CARDS.md  ROADMAP.md
docs/reports/: _m6_bakeoff_raw.json  ablations-1.md  m1-tokenizer.md  m2-corpus.md  m3-model.md  m3-tokenizer.md  m4-results.json  m4-results.md  m5-results.json  m5-results.md  m6-distillation.md  m6-results.json  m6-results.md  m6-teacher-bakeoff.md  m7-annotation.md  m7-audit-sample.md  m8-annotation-model.md  m9-ondevice-demo.md
scripts/: ablate.py  annotate.py  build_corpus.py  cloud_bootstrap.sh  evaluate.py  evaluate_annotate.py  pretokenize.py  pretokenize_jq.py  train.py  train_jq.py  train_tokenizer.py  vast_down.sh  vast_up.sh
src/kanjiland/: __init__.py
src/kanjiland/data/: corpus_io.py  filters.py  langid.py  normalize.py  pipeline.py  segment.py  similarity.py  stats.py  tatoeba.py
src/kanjiland/data/sources/: __init__.py  _util.py  jesc.py  jparacrawl.py  kftt.py
src/kanjiland/eval/: __init__.py  baseline.py  metrics.py  results.py  translate.py
src/kanjiland/format/: __init__.py  grammar.py  linter.py  parser.py  records.py  separators.py  serializer.py
src/kanjiland/model/: __init__.py  attention.py  decode.py  layers.py  positional.py  transformer.py
src/kanjiland/tokenizer/: __init__.py  bpe.py  pretokenize.py  tokenizer.py
src/kanjiland/train/: data.py  device.py  loss.py  schedule.py  seed.py  wandb_init.py
tests/: test_data.py  test_data_pipeline.py  test_data_tatoeba.py  test_decode.py  test_eval.py  test_eval_metrics.py  test_format.py  test_model.py  test_runtime_no_nlp_deps.py  test_tokenizer.py  test_train_loop.py  test_train_utils.py
tools/: README.md
tools/annotate/: assemble.py  batch_annotate.py  build_m8_data.py  deterministic.py  teacher.py
tools/demo/: demo_data.json  index.html
tools/teacher/: bakeoff.py  batch.py  build_kd_sets.py  sample_source.py  translate.py
