[project]
name = "kanjiland"
version = "0.0.1"
description = "From-scratch Japanese reading-comprehension engine"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.3",
    "numpy",
    "pyyaml",
    "wandb",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis", "ruff"]
eval = ["sacrebleu", "unbabel-comet"]
data = ["datasets", "requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanjiland"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
