[project]
name = "kanjiland"
version = "0.0.1"
description = "From-scratch Japanese reading-comprehension engine"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.3",
    "numpy",
    "pyyaml",
    "wandb",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis", "ruff"]
eval = ["sacrebleu", "unbabel-comet", "setuptools<80"]  # <80: still ships pkg_resources (COMET/torchmetrics need it)
data = ["datasets", "requests", "fasttext-wheel", "sentence-transformers"]

# PyTorch CUDA build pin — LINUX ONLY. The default PyPI torch wheel is built
# against CUDA 13 (cu130), which needs a driver >= 580; the Linux training box
# runs driver 545 (CUDA 12.3 max). We therefore pull torch from PyTorch's CUDA
# 12.6 index there — same version, CUDA-12.x runtime, which runs on driver 545
# via CUDA minor-version compatibility.
#
# The `marker` scopes this to Linux so other platforms (e.g. an Apple-silicon
# Mac for dev) fall back to the default PyPI torch, which ships macOS arm64
# wheels with MPS. The cu126 index has no macOS wheels, so an unconditional pin
# breaks `uv sync` on the Mac.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanjiland"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
